@@ -69,6 +69,8 @@ dpkg (1.16.1) UNRELEASED; urgency=low
     flags. Particularly useful for package maintainers who don't want
     their supplementary flags to take precedence over user submitted
     flags.
+  * Add new --dump action to dpkg-buildflags and make it the default action.
+    Closes: #603435
 
   [ Guillem Jover ]
   * Install deb-src-control(5) man pages in dpkg-dev. Closes: #620520
